--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,18 @@ body{
     margin: 0;
     padding: 0;
 }
+
+#Cabecera
+{
+    background: #33A;
+    box-shadow: 0px 2px 20 px 0 px rgba(0, 0, 0 0,5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5cm;
+
+}
+
 #container
 {
     width: 70%;
@@ -17,4 +29,8 @@ body{
 #container h1
 {
     font-size: 20px;
+}
+#post
+{
+    padding: 1em;
 }
